@@ -68,6 +68,7 @@ class UtAdministrativeAppealsChamberDailyHearingListFileConverterTest {
     private static final String IMPORTANT_INFORMATION_MESSAGE = "Important information heading does not match";
     private static final String BODY_MESSAGE = "Body does not match";
     private static final String TABLE_HEADERS_MESSAGE = "Table headers does not match";
+    private static final String TABLE_CONTENT_MESSAGE = "Table content does not match";
 
     private final NonStrategicListFileConverter converter = new NonStrategicListFileConverter();
 
@@ -122,7 +123,7 @@ class UtAdministrativeAppealsChamberDailyHearingListFileConverterTest {
             .as(LAST_UPDATED_DATE_MESSAGE)
             .isEqualTo("Last updated 20 January 2025 at 9:30am");
 
-        softly.assertThat(document.getElementsByClass(SUMMARY_TEXT_CLASS).get(0).text())
+        softly.assertThat(document.getElementsByClass(SUMMARY_TEXT_CLASS).getFirst().text())
             .as(IMPORTANT_INFORMATION_MESSAGE)
             .isEqualTo("Important information");
 
@@ -197,6 +198,21 @@ class UtAdministrativeAppealsChamberDailyHearingListFileConverterTest {
                 "Additional information"
             );
 
+        softly.assertThat(document.getElementsByTag("td"))
+            .as(TABLE_CONTENT_MESSAGE)
+            .hasSize(8)
+            .extracting(Element::text)
+            .containsExactly(
+                "10:15am",
+                "Appellant 1",
+                "12345",
+                "Judge A",
+                "Member A",
+                "Mode of hearing 1",
+                "Venue 1",
+                "Additional information 1"
+            );
+
         softly.assertAll();
     }
 
@@ -239,7 +255,7 @@ class UtAdministrativeAppealsChamberDailyHearingListFileConverterTest {
             .as(LAST_UPDATED_DATE_MESSAGE)
             .isEqualTo("Diweddarwyd ddiwethaf 20 January 2025 am 9:30am");
 
-        softly.assertThat(document.getElementsByClass(SUMMARY_TEXT_CLASS).get(0).text())
+        softly.assertThat(document.getElementsByClass(SUMMARY_TEXT_CLASS).getFirst().text())
             .as(IMPORTANT_INFORMATION_MESSAGE)
             .isEqualTo("Gwybodaeth bwysig");
 
@@ -312,6 +328,21 @@ class UtAdministrativeAppealsChamberDailyHearingListFileConverterTest {
                 "Math o Wrandawiad",
                 "Lleoliad",
                 "Gwybodaeth ychwanegol"
+            );
+
+        softly.assertThat(document.getElementsByTag("td"))
+            .as(TABLE_CONTENT_MESSAGE)
+            .hasSize(8)
+            .extracting(Element::text)
+            .containsExactly(
+                "10:15am",
+                "Appellant 1",
+                "12345",
+                "Judge A",
+                "Member A",
+                "Mode of hearing 1",
+                "Venue 1",
+                "Additional information 1"
             );
 
         softly.assertAll();
